--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ cytoolz==0.8.2
 decorator==4.1.2
 dill==0.2.7.1
 Django==1.11.7
+django-jet==1.0.6
+django-mptt==0.8.7
 docopt==0.6.2
 docutils==0.14
 en-core-web-sm==2.0.0
