--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,11 @@ dill==0.2.7.1
 Django==1.11.7
 django-jet==1.0.6
 django-mptt==0.8.7
+django-nested-admin==3.0.21
 django-solo==1.1.2
 docopt==0.6.2
 docutils==0.14
+duckling==1.7.3
 en-core-web-sm==2.0.0
 entrypoints==0.2.3
 enum34==1.1.6
@@ -49,6 +51,7 @@ ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.10
 jmespath==0.9.3
+JPype1==0.6.2
 jsonpickle==0.9.5
 jsonschema==2.6.0
 jupyter-core==4.4.0
@@ -76,11 +79,13 @@ ply==3.10
 preshed==1.0.0
 protobuf==3.4.0
 Pygments==2.2.0
+pygraphviz==1.3.1
 pykwalify==1.6.0
 pymessenger==0.0.7.0
 pyparsing==2.2.0
 python-crfsuite==0.9.5
 python-dateutil==2.6.1
+python-monkey-business==1.0.0
 pytz==2017.3
 PyYAML==3.12
 rasa-core==0.7.4
